--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,12 +38,24 @@ h1{
         font-weight: italic;
         margin-top: 30px
     }
+    .img img {
+        margin-bottom: auto;
+        block-size: 400px;
+        margin-right: auto;
+       /* max-width: 100%;*/
 }
+  
 @media (min-width: 640px) and (max-width: 1024px) {
     .mask p {
         font-size: 35px;
         font-weight: italic;
         margin-top:80px;
+    }
+    .img img {  
+        margin-bottom: auto;
+        block-size: 450px;
+        margin-right: auto;
+        /*max-width: 100%;*/
     }
 }
 
@@ -80,7 +92,9 @@ h1{
     border-radius: 10px;
   }
   
-
+.carouselText {
+    width: 50px !important;
+}
 #professionnelle.container-fluid{
     padding: 0;
 }
@@ -180,4 +194,5 @@ ul{
 #press{
     margin-right: 20px;
     margin-left: 20px;
+}
 }
